adapt(hero): секция Hero теперь адаптивна

--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
                                 </div>
                                 <p>Часов</p>
                             </article>
-                            <article class="countdown__count">
+                            <article class="countdown__count hidden-decoration">
                                 <div class="countdown__display">
                                     <span id="countdownMinutesFirst">0</span>
                                     <span id="countdownMinutesSecond">0</span>
                                 </div>
                                 <p>Минут</p>
                             </article>
-                            <article class="countdown__count">
+                            <article class="countdown__count hidden">
                                 <div class="countdown__display">
                                     <span id="countdownSecondsFirst">0</span>
                                     <span id="countdownSecondsSecond">0</span>
@@ -105,6 +105,7 @@
                     </div>
 
                 </div>
+
                 <div class="hero__image">
                     <img src="/public/images/hero-background.png" class="hero__image-image" />
                     <!-- Томат который находить перед картинкой -->
@@ -125,8 +126,8 @@
                     сочных и спелых сезонных <span>продуктов, из которых можно приготовить вкуснейшие блюда.</span>
                 </p>
                 <p class="hero__banner-description">
-                    Где бы вы ни проводили это время, <span>готовьте блюда<br> с использованием продукции “Махеевъ”<br> и присылайте
-                    свои яркие рецепты на конкурс.</span><br> Покажите всем, какие цвета у вашего лета!
+                    Где бы вы ни проводили это время, <span>готовьте блюда с использованием продукции “Махеевъ” и присылайте
+                    свои яркие рецепты на конкурс.</span> Покажите всем, какие цвета у вашего лета!
                 </p>
             </div>
         </div>
