feat: добавил секцию competition

--- a/index.html
+++ b/index.html
@@ -109,26 +109,71 @@
                 <div class="hero__image">
                     <img src="/public/images/hero-background.png" class="hero__image-image" />
                     <!-- Томат который находить перед картинкой -->
-                    <img src="/public/images/deco-tomato.png" class="hero__image-decoration"/>
+                    <img src="/public/images/deco-tomato.png" class="hero__image-decoration" />
                     <!-- Томат для заднего фона -->
-                    <img src="/public/images/deco-tomato.png" class="hero__image-decoration"/>
+                    <img src="/public/images/deco-tomato.png" class="hero__image-decoration" />
                     <!-- Листочки для заднего фона -->
-                    <img src="/public/images/deco-leaf.png" class="hero__image-decoration"/>
-                    <img src="/public/images/deco-leaf.png" class="hero__image-decoration"/>
+                    <img src="/public/images/deco-leaf.png" class="hero__image-decoration" />
+                    <img src="/public/images/deco-leaf.png" class="hero__image-decoration" />
                 </div>
             </div>
             <div class="hero__banner">
                 <p class="hero__banner-description">
-                    <span>Лето - это волшебное время</span>, 
+                    <span>Лето - это волшебное время</span>,
                     полное ярких и сочных красок. Многие ждут его, чтобы насладиться
-                    солнечными днями и устроить небольшое приключение с семьей или друзьями. 
-                    А еще<span>плюс лета - большое количество</span> 
+                    солнечными днями и устроить небольшое приключение с семьей или друзьями.
+                    А еще<span>плюс лета - большое количество</span>
                     сочных и спелых сезонных <span>продуктов, из которых можно приготовить вкуснейшие блюда.</span>
                 </p>
                 <p class="hero__banner-description">
-                    Где бы вы ни проводили это время, <span>готовьте блюда с использованием продукции “Махеевъ” и присылайте
-                    свои яркие рецепты на конкурс.</span> Покажите всем, какие цвета у вашего лета!
+                    Где бы вы ни проводили это время, <span>готовьте блюда с использованием продукции “Махеевъ” и
+                        присылайте
+                        свои яркие рецепты на конкурс.</span> Покажите всем, какие цвета у вашего лета!
                 </p>
+            </div>
+        </div>
+    </section>
+
+    <section class="competition">
+        <div class="competition__inner container">
+            <h2 class="competition__title">правила конкурса</h2>
+
+            <div class="competition__body grid grid--3">
+                <article class="competition-card">
+                    <span class="competition-card__rule">1</span>
+                    <h3 class="competition-card__title">приготовьте блюдо</h3>
+                    <p class="competition-card__description">
+                        с кетчупом, маринадом или горчицей “Махеевъ” и сделайте пошаговый фоторецепт.
+                    </p>
+                </article>
+                <article class="competition-card">
+                    <span class="competition-card__rule">2</span>
+                    <h3 class="competition-card__title">Покажите</h3>
+                    <p class="competition-card__description">
+                        на фото упаковку “Махеевъ”.
+                    </p>
+                </article>
+                <article class="competition-card">
+                    <span class="competition-card__rule">3</span>
+                    <h3 class="competition-card__title">напишите</h3>
+                    <p class="competition-card__description">
+                        в названии рецепта “Махеевъ”.
+                    </p>
+                </article>
+            </div>
+
+            <div class="competition__actions">
+                <button class="button" type="button">
+                    <a href="#" class="hero__link">
+                        Участвовать в конкурсе
+                    </a>
+                </button>
+
+                <button class="button button--outline" type="button">
+                    <a href="#" class="hero__link">
+                        Подробные правила
+                    </a>
+                </button>
             </div>
         </div>
     </section>
