adapt(competition): секция Competition теперь адаптивна

--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@
 
             <div class="competition__actions">
                 <button class="button" type="button">
-                    <a href="#" class="hero__link">
+                    <a href="#" class="competition__link">
                         Участвовать в конкурсе
                     </a>
                 </button>
 
                 <button class="button button--outline" type="button">
-                    <a href="#" class="hero__link">
+                    <a href="#" class="competition__link">
                         Подробные правила
                     </a>
                 </button>
