feat: добавил секцию prizes

--- a/index.html
+++ b/index.html
@@ -140,21 +140,21 @@
 
             <div class="competition__body grid grid--3">
                 <article class="competition-card">
-                    <span class="competition-card__rule">1</span>
+                    <span class="count-circle">1</span>
                     <h3 class="competition-card__title">приготовьте блюдо</h3>
                     <p class="competition-card__description">
                         с кетчупом, маринадом или горчицей “Махеевъ” и сделайте пошаговый фоторецепт.
                     </p>
                 </article>
                 <article class="competition-card">
-                    <span class="competition-card__rule">2</span>
+                    <span class="count-circle">2</span>
                     <h3 class="competition-card__title">Покажите</h3>
                     <p class="competition-card__description">
                         на фото упаковку “Махеевъ”.
                     </p>
                 </article>
                 <article class="competition-card">
-                    <span class="competition-card__rule">3</span>
+                    <span class="count-circle">3</span>
                     <h3 class="competition-card__title">напишите</h3>
                     <p class="competition-card__description">
                         в названии рецепта “Махеевъ”.
@@ -175,6 +175,52 @@
                     </a>
                 </button>
             </div>
+        </div>
+    </section>
+
+    <section class="prizes">
+        <div class="prizes__inner container">
+            <header class="prizes__header">
+                <h2 class="prizes__title">Призы конкурса</h2>
+                <p class="prizes__description">
+                    По итогам конкурса авторы лучших рецептов получат ценные призы или наборы с продукцией “Махеевъ”!
+                </p>
+            </header>
+
+            <div class="prizes__body grid grid--3">
+                <article class="prizes-card">
+                    <img src="/public/images/prizes-card-2.png" class="prizes-card__image"
+                        alt="Чайник Röndell RDE-1001" />
+                    <span class="prizes-card__count count-circle">2</span>
+                    <h3 class="prizes-card__title">Чайник Röndell RDE-1001</h3>
+                    <span class="prizes-card__background"></span>
+                </article>
+
+                <article class="prizes-card">
+                    <img src="/public/images/prizes-card-1.png" class="prizes-card__image"
+                        alt="Чайник Röndell RDE-1001" />
+                    <span class="prizes-card__count count-circle">1</span>
+                    <h3 class="prizes-card__title">Настольный блендер Röndell RDE-1250</h3>
+                    <span class="prizes-card__background"></span>
+                </article>
+
+                <article class="prizes-card">
+                    <img src="/public/images/prizes-card-3.png" class="prizes-card__image"
+                        alt="Чайник Röndell RDE-1001" />
+                    <span class="prizes-card__count count-circle">3</span>
+                    <h3 class="prizes-card__title">Миксер Röndell RDE-1350</h3>
+                    <span class="prizes-card__background"></span>
+                </article>
+            </div>
+
+            <div class="prizes-box">
+                <img src="/public/images/ketchup-box.png" class="prizes-box__image" />
+                <h3 class="prizes-box__description">
+                    + 5 призовых наборов с продукцией «Махеевъ»!
+                </h3>
+            </div>
+
+            <h3 class="prizes__info">Конкурс проводится с 15 июля по 15 августа 2022 г.</h3>
         </div>
     </section>
 
