--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header__inner container">
             <a href="/index.html" class="header__logo">
                 <svg class="header__logo-icon" width="173" height="56">
-                    <use href="/public/icons.svg#icon-logo" />
+                    <use href="/public/sprites.svg#icon-logo" />
                 </svg>
             </a>
             <nav class="header__nav">
@@ -221,6 +221,31 @@
             </div>
 
             <h3 class="prizes__info">Конкурс проводится с 15 июля по 15 августа 2022 г.</h3>
+        </div>
+    </section>
+
+    <section class="products">
+        <div class="products__inner container">
+            <h2 class="products__title">наша продукция</h2>
+            <div class="products-slider" id="productsSlider">
+                <div id="productsSliderWrapper">
+                    <img src="/public/images/product-image-1.png" class="products-slider__slide"
+                        id="productsSliderSlide" alt="Ketchup product" />
+                    <img src="/public/images/product-image-2.png" class="products-slider__slide"
+                        id="productsSliderSlide" alt="Ketchup product" />
+                    <img src="/public/images/product-image-3.png" class="products-slider__slide"
+                        id="productsSliderSlide" alt="Ketchup product" />
+                    <img src="/public/images/product-image-4.png" class="products-slider__slide"
+                        id="productsSliderSlide" alt="Ketchup product" />
+                    <img src="/public/images/product-image-1.png" class="products-slider__slide"
+                        id="productsSliderSlide" alt="Ketchup product" />
+                    <img src="/public/images/product-image-2.png" class="products-slider__slide"
+                        id="productsSliderSlide" alt="Ketchup product" />
+                </div>
+                <button class="product-slider__swiper" id="swiperSwipeLeft"></button>
+                <button class="product-slider__swiper" id="swiperSwipeRight"></button>
+                <div class="prodcut-slider__pagiantion" id="swiperPagination"></div>
+            </div>
         </div>
     </section>
 
