adapt(products): секция Products теперь адаптивна

--- a/index.html
+++ b/index.html
@@ -229,22 +229,19 @@
             <h2 class="products__title">наша продукция</h2>
             <div class="products-slider" id="productsSlider">
                 <div id="productsSliderWrapper">
-                    <img src="/public/images/product-image-1.png" class="products-slider__slide"
+                    <img src="/public/images/product-image-1.png" class="products-slider__slide slide"
                         id="productsSliderSlide" alt="Ketchup product" />
-                    <img src="/public/images/product-image-2.png" class="products-slider__slide"
+                    <img src="/public/images/product-image-2.png" class="products-slider__slide slide"
                         id="productsSliderSlide" alt="Ketchup product" />
-                    <img src="/public/images/product-image-3.png" class="products-slider__slide"
+                    <img src="/public/images/product-image-3.png" class="products-slider__slide slide"
                         id="productsSliderSlide" alt="Ketchup product" />
-                    <img src="/public/images/product-image-4.png" class="products-slider__slide"
+                    <img src="/public/images/product-image-4.png" class="products-slider__slide slide"
                         id="productsSliderSlide" alt="Ketchup product" />
-                    <img src="/public/images/product-image-1.png" class="products-slider__slide"
+                    <img src="/public/images/product-image-1.png" class="products-slider__slide slide"
                         id="productsSliderSlide" alt="Ketchup product" />
-                    <img src="/public/images/product-image-2.png" class="products-slider__slide"
+                    <img src="/public/images/product-image-2.png" class="products-slider__slide slide"
                         id="productsSliderSlide" alt="Ketchup product" />
                 </div>
-                <button class="product-slider__swiper" id="swiperSwipeLeft"></button>
-                <button class="product-slider__swiper" id="swiperSwipeRight"></button>
-                <div class="prodcut-slider__pagiantion" id="swiperPagination"></div>
             </div>
         </div>
     </section>
