feat: добавил секцию recipes

--- a/index.html
+++ b/index.html
@@ -246,6 +246,64 @@
         </div>
     </section>
 
+    <section class="recipes">
+        <div class="recipes__inner container">
+            <header class="recipes__header">
+                <h2 class="recipes__title">лучшие рецепты</h2>
+                <p class="recipes__description">
+                    Вдохновляйтесь рецептами других авторов, создавайте свои собственные и умножайте шансы на победу!
+                    Чем
+                    больше рецептов вы опубликуете - тем ближе призы!
+                </p>
+            </header>
+
+            <div class="recipes__body grid grid--4">
+                <article class="recipes-card">
+                    <img src="/public/images/recipes-image-1.png" class="recipes-card__image"
+                        alt="Карамельная коврижка с джемом «махеевъ»" />
+                    <p class="recipes-card__description">Карамельная коврижка с джемом «махеевъ» «кусочки лета»</p>
+                </article>
+                <article class="recipes-card">
+                    <img src="/public/images/recipes-image-2.png" class="recipes-card__image"
+                        alt="Морковный кекс-суфле с джемом «махеевъ»" />
+                    <p class="recipes-card__description">Морковный кекс-суфле с джемом «махеевъ» «кусочки лета»</p>
+                </article>
+                <article class="recipes-card">
+                    <img src="/public/images/recipes-image-3.png" class="recipes-card__image"
+                        alt="Малиновая нежность с джемом «махеевъ»" />
+                    <p class="recipes-card__description">Малиновая нежность с джемом «махеевъ» «кусочки лета»</p>
+                </article>
+                <article class="recipes-card">
+                    <img src="/public/images/recipes-image-4.png" class="recipes-card__image"
+                        alt="Десерт без выпечки со сметаной и клубничным джемом «махеевъ»" />
+                    <p class="recipes-card__description">Десерт без выпечки со сметаной и клубничным джемом «махеевъ» «кусочки лета»</p>
+                </article>
+                <article class="recipes-card">
+                    <img src="/public/images/recipes-image-5.png" class="recipes-card__image"
+                        alt="Сладкий сэндвич с джемом «махеевъ»" />
+                    <p class="recipes-card__description">Сладкий сэндвич с джемом «махеевъ» «кусочки лета»</p>
+                </article>
+                <article class="recipes-card">
+                    <img src="/public/images/recipes-image-6.png" class="recipes-card__image"
+                        alt="Рогалики из детства с джемом «махеевъ»" />
+                    <p class="recipes-card__description">Рогалики из детства с джемом «махеевъ» «кусочки лета»</p>
+                </article>
+                <article class="recipes-card">
+                    <img src="/public/images/recipes-image-7.png" class="recipes-card__image"
+                        alt="Гречневая галета с джемом «махеевъ»" />
+                    <p class="recipes-card__description">Гречневая галета с джемом «махеевъ» «кусочки лета»</p>
+                </article>
+                <article class="recipes-card">
+                    <img src="/public/images/recipes-image-8.png" class="recipes-card__image"
+                        alt="Творожное пирожное с вишней и джемом «махеевъ»" />
+                    <p class="recipes-card__description">Творожное пирожное с вишней и джемом «махеевъ» «кусочки лета»</p>
+                </article>
+            </div>
+
+            <button class="recipes__button button button--primary">Посмотреть еще</button>
+        </div>
+    </section>
+
     <script src="/src/js/index.js"></script>
 </body>
 
