feat: добавил секцию footer

--- a/index.html
+++ b/index.html
@@ -276,7 +276,8 @@
                 <article class="recipes-card">
                     <img src="/public/images/recipes-image-4.png" class="recipes-card__image"
                         alt="Десерт без выпечки со сметаной и клубничным джемом «махеевъ»" />
-                    <p class="recipes-card__description">Десерт без выпечки со сметаной и клубничным джемом «махеевъ» «кусочки лета»</p>
+                    <p class="recipes-card__description">Десерт без выпечки со сметаной и клубничным джемом «махеевъ»
+                        «кусочки лета»</p>
                 </article>
                 <article class="recipes-card">
                     <img src="/public/images/recipes-image-5.png" class="recipes-card__image"
@@ -296,13 +297,27 @@
                 <article class="recipes-card">
                     <img src="/public/images/recipes-image-8.png" class="recipes-card__image"
                         alt="Творожное пирожное с вишней и джемом «махеевъ»" />
-                    <p class="recipes-card__description">Творожное пирожное с вишней и джемом «махеевъ» «кусочки лета»</p>
+                    <p class="recipes-card__description">Творожное пирожное с вишней и джемом «махеевъ» «кусочки лета»
+                    </p>
                 </article>
             </div>
 
             <button class="recipes__button button button--primary">Посмотреть еще</button>
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="footer__inner container">
+            <div class="footer__body">
+                <a href="./index.html" class="footer-logo">
+                    <svg width="260" height="85" class="footer-logo__icon">
+                        <use href="/public/sprites.svg#icon-logo" />
+                    </svg>
+                </a>
+                <p class="footer__copyright">©Все права защищены</p>
+            </div>
+        </div>
+    </footer>
 
     <script src="/src/js/index.js"></script>
 </body>
